test/kubernetes/manifests/pando-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pando
  namespace: pando
spec:
  template:
    spec:
      containers:
        - name: pando
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: acme-ca
              mountPath: /etc/pando-acme
              readOnly: true
      volumes:
        - name: acme-ca
          configMap:
            name: pebble-ca
